--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <div class="contenedor">
     <h1>Rodrigo de Mora</h1>
     <p id="mensaje">¡Bienvenido a mi página personal!</p>
+    <p id="mensaje2">Frase añadida para completar la práctica 4.1</p> 
     <img src="images/Getafe_CF_Logo.png"><br>
     <button id="cambiarMensaje">Cambiar mensaje</button>
   </div>
