--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Rodrigo de Mora</h1>
     <p id="mensaje">¡Bienvenido a mi página personal!</p>
     <p id="mensaje2">Frase añadida para completar la práctica 4.1</p>
+    <p id="mensaje3">Este párrafo es para cambiar el index</p> 
     <img src="images/Getafe_CF_Logo.png"><br>
     <button id="cambiarMensaje">Cambiar mensaje</button>
   </div>
