--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Página de Rodrigo de Mora</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <div class="contenedor">
@@ -16,6 +16,6 @@
     <button id="cambiarMensaje">Cambiar mensaje</button>
   </div>
 
-  <script src="/js/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
