--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <p id="mensaje2">Frase añadida para completar la práctica 4.1</p>
     <p id="mensaje3">Este párrafo es para cambiar el index</p> 
     <img src="images/Getafe_CF_Logo.png"><br>
-    <button id="cambiarMensaje">Cambiar mensaje</button>
-    <p id="mensaje">¡Hola de nuevo!</p>
+    <form method="post" id="form">
+      <p>Indica tu nombre: <input type="text" id="message" name="message"></p> 
+      <button id="cambiarMensaje">Enviar</button> 
+    </form>
+    <p id="mensaje4">¡Hola de nuevo!</p>
   </div>
 
   <script src="./js/script.js"></script>
